[gd_scene load_steps=12 format=2]

[ext_resource path="res://items/inventory_sprites/stick.png" type="Texture" id=1]
[ext_resource path="res://UI/inventory/item_info/name_decor.png" type="Texture" id=2]
[ext_resource path="res://UI/inventory/item_info/equip_button_hover.png" type="Texture" id=3]
[ext_resource path="res://UI/inventory/item_info/equip_button_normal.png" type="Texture" id=4]
[ext_resource path="res://UI/inventory/item_info/use_button_normal.png" type="Texture" id=5]
[ext_resource path="res://UI/inventory/item_info/back_button_normal.png" type="Texture" id=6]
[ext_resource path="res://UI/inventory/item_info/back_button_hover.png" type="Texture" id=7]
[ext_resource path="res://UI/inventory/item_info/icon_decor.png" type="Texture" id=8]
[ext_resource path="res://UI/inventory/item_info/use_button_hover.png" type="Texture" id=9]
[ext_resource path="res://UI/inventory/item_info/ItemInfoMenu.gd" type="Script" id=10]
[ext_resource path="res://UI/Font Resources/wendy-10_pause_menu_header.tres" type="DynamicFont" id=11]

[node name="ItemInfoMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_constants/margin_right = 1
custom_constants/margin_top = 1
custom_constants/margin_left = 1
custom_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 63.0
margin_bottom = 63.0
mouse_filter = 2

[node name="Top" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 62.0
margin_bottom = 8.0
custom_constants/separation = 1

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer/Top"]
margin_right = 7.0
margin_bottom = 8.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="NameMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/Top"]
margin_left = 8.0
margin_right = 62.0
margin_bottom = 8.0

[node name="NameDecor" type="TextureRect" parent="MarginContainer/VBoxContainer/Top/NameMargin"]
margin_right = 54.0
margin_bottom = 8.0
texture = ExtResource( 2 )

[node name="NameLabelMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/Top/NameMargin"]
margin_right = 54.0
margin_bottom = 8.0
custom_constants/margin_right = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Top/NameMargin/NameLabelMargin"]
margin_right = 52.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 11 )
text = "Name"
align = 2

[node name="SecondRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 62.0
margin_bottom = 25.0

[node name="IconMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/SecondRow"]
margin_right = 14.0
margin_bottom = 13.0
custom_constants/margin_left = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/SecondRow/IconMargin"]
margin_left = 1.0
margin_right = 14.0
margin_bottom = 13.0
custom_constants/margin_bottom = 0

[node name="ItemIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/SecondRow/IconMargin/MarginContainer"]
margin_right = 13.0
margin_bottom = 13.0
texture = ExtResource( 1 )

[node name="IconDecor" type="TextureRect" parent="MarginContainer/VBoxContainer/SecondRow/IconMargin"]
margin_left = 1.0
margin_right = 14.0
margin_bottom = 13.0
texture = ExtResource( 8 )

[node name="ButtonMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer/SecondRow"]
margin_left = 29.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 12.0
size_flags_horizontal = 10
size_flags_vertical = 4
custom_constants/margin_right = 1

[node name="Equip" type="TextureButton" parent="MarginContainer/VBoxContainer/SecondRow/ButtonMargin"]
margin_right = 32.0
margin_bottom = 11.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Use" type="TextureButton" parent="MarginContainer/VBoxContainer/SecondRow/ButtonMargin"]
visible = false
margin_right = 32.0
margin_bottom = 11.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 9 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/Top/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecondRow/ButtonMargin/Equip" to="." method="_on_Equip_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SecondRow/ButtonMargin/Use" to="." method="_on_Use_pressed"]
